# Django_Shopnow

./: .gitattributes  .gitignore  CNAME  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  render.yaml
apps/shop/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
apps/shop/migrations/: 0001_initial.py  0002_alter_category_options_category_created_at_and_more.py  0003_alter_product_options_product_slug_and_more.py
apps/shop/templatetags/: custom_tags.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
static/css/: style.css
template/: Base.html  Cart.html  Category_products.html  Feedback.html  Footer.html  Forgot_Pass.html  Header.html  Index.html  Index2.html  Login.html  Policy.html  Product-info.html  Register.html  Search.html  See-all.html
