[project]
name = "shopnow"
version = "0.1.0"
description = "E-commerce website"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref==3.8.1",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.3.1",
    "colorama==0.4.6",
    "dj-database-url==3.1.2",
    "django==5.1.15",
    "django-environ==0.12.0",
    "gunicorn==25.1.0",
    "idna==3.10",
    "mypy-extensions==1.1.0",
    "mysqlclient==2.2.6",
    "packaging==26.0",
    "pathspec==1.0.4",
    "pillow==12.1.1",
    "platformdirs==4.9.2",
    "psycopg2-binary==2.9.11",
    "pytokens==0.4.1",
    "razorpay==1.4.2",
    "requests==2.32.5",
    "ruff==0.15.6",
    "setuptools<81",
    "sqlparse==0.5.4",
    "tzdata==2024.2",
    "urllib3==2.6.3",
    "whitenoise==6.12.0",
]
